# Lesson_10

Task_01/: CMakeLists.txt  my_first_cmake_program.cpp
Task_02/: CMakeLists.txt  Task_03.sln  Task_03.vcxproj  Task_03.vcxproj.filters
Task_02/CMakeBuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Shapes.sln  Shapes.vcxproj  Shapes.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
